@@ -5,6 +5,8 @@ RELEASE NOTES
 -----------------------------
 
 Added function for generating binary matrix for gradual items
+Bug fixes
+- fixed an error that converted time columns to Strings and deleted them
 
 
 
